--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="https" />
+        </intent>
+    </queries>
+
     <application
         android:name=".utilities.FitWithUsApplication"
         android:allowBackup="true"
@@ -13,6 +25,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitWithUs"
         tools:targetApi="31">
+
+
+
+
+
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
